--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ bin/
 ### Mac OS ###
 .DS_Store
 /.idea/workspace.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_9_26_2022_6_08_PM__Changes_.xml
+/.idea/shelf/Uncommitted_changes_before_Update_at_9_26_2022_6_08_PM_[Changes]/shelved.patch
+
